# OpenOGEHL

./: .clang-format  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
doc/: .gitignore  bibliografie.bib  bibliografie.tex  concluzii.tex  configurare.tex  evaluare.tex  ghid.tex  introducere.tex  involved_files.puml  oghel.tex  proj.tex  proj.toc  ui_bp_data.puml
input/: FPUZZLE.TRA
simplesim/: CMakeLists.txt  bpred.c  gen  log.txt  sim-bpred.c  sysprobe
simplesim/inc/: bpred.h  eventq.h  machine.def
simplesim/libexo/: exolex.c  libexo.c  libexo.h
simplesim/src/: eval.c  loader.c  machine.c  symbol.c  syscall.c
simplesim/target-pisa/: syscall.c
src/: CMakeLists.txt  main.c
src/bp/: bp.c  bp.h  bp_config.h  bp_defines.h  bp_types.h  utils.c
src/common/: task.c  task.h  thread_com.c  thread_com.h  utils.c  utils.h
src/simplesim/: CMakeLists.txt
src/simplesim/inc/: config.h  machine.h
src/template/: template.c  template.h
src/ui/: gui_window_file_dialog.h  style_dark.h  ui.c  ui.h
test/: CMakeLists.txt  main.c
test/bp/: bp_test.c  bp_test.h
